# cs61c

./: README.md
fa20-proj3-starter-master/: README.md  notes.md
fa20-proj3-starter-master/cpu/: alu.circ  control_logic.circ  cpu.circ  imm_gen.circ  regfile.circ
fa20-proj3-starter-master/tests/part_a/addi_pipelined/: cpu-addi-pipelined.circ
fa20-proj4-starter-master/: .gitignore  CMakeLists.txt  Makefile  mat_test.c  matrix.c
lab03/: factorial.s  list_map.s
lab05/: Notes.md  ex1.circ  ex2.circ  ex3.circ  ex5.circ
lab05/testing/circ_files/: ex1.circ  ex4.circ  ex5.circ
lab3/: exercise1.md  list_map.s
su20-proj2-starter-master/src/: argmax.s  classify.s  dot.s  matmul.s  read_matrix.s  relu.s  write_matrix.s
su20-proj2-starter-master/tests/assembly/: test_argmax.s  test_dot.s  test_matmul.s  test_read_matrix.s  test_relu.s  test_write_matrix.s
test/: multiplication.circ  pipelining_curcit.circ
